# PolyLoft

./: .gitignore  CMakeLists.txt  README.md
build_scripts/: b
build_scripts/template-proj-dir/test/: CMakeLists.txt
scripts/: b  create-project
src/mono/: CMakeLists.txt
src/mono/test/: CMakeLists.txt
src/opengl/: CMakeLists.txt
src/opengl/test/: CMakeLists.txt
template-proj-dir/: CMakeLists.txt
